Refactored Nagios playbook

--- a/roles/nrpe_configuration/handlers/main.yml
+++ b/roles/nrpe_configuration/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: restart nagios-nrpe-server
-  ansible.builtin.systemd:
+  ansible.builtin.service:
     enabled: true
     name: nagios-nrpe-server
     state: restarted
