--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = inventory
 roles_path = roles
-ansible_python_interpreter = /usr/bin/python3
+ansible_python_interpreter = auto_silent
 host_key_checking = false
 
 [ssh_connection]
