--- a/roles/nagios_configuration/handlers/main.yml
+++ b/roles/nagios_configuration/handlers/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: restart apache2
-  ansible.builtin.systemd:
+  ansible.builtin.service:
     enabled: true
     name: apache2
     state: restarted
 
 - name: restart nagios4
-  ansible.builtin.systemd:
+  ansible.builtin.service:
     enabled: true
     name: nagios4
     state: restarted
